--- a/1-pre-entrega/index.html
+++ b/1-pre-entrega/index.html
@@ -7,7 +7,8 @@
 
 </head>
 <body>
-    <h1> Tienda en Linea</h1>
+    <h1> Tienda de Mascotas en Línea</h1>
+    <p> Encontrarás productos indispensables para consentir a tu mascotita</p>
 
     <script src="scripts.js"></script>
 </body>
