--- a/2-pre-entrega/index.html
+++ b/2-pre-entrega/index.html
@@ -6,7 +6,7 @@
     <title>Cats-Store</title>
     <link href="css/style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="header-title">
@@ -36,8 +36,8 @@
                 <div class="col-sm-3">
                     <div id="carrito"> </div>
                     <div class="button-container">
-                        <button id="btnCompra" class="btn btn-success">Comprar</button>
-                        <button id="btnLimpia" class="btn btn-warning">Limpiar</button>
+                        <button id="btnCompra" class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Realizar compra"><i class="bi bi-credit-card-2-back-fill"></i> Pagar</button>
+                        <button id="btnLimpia" class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="Vaciar el carrito"><i class="bi bi-trash2"></i> Limpiar</button>
                     </div>
                 </div>
             </div> 
